Edd changes  html, css
1.  Edd "visually-hidden"  for H2  in portfolio, index
2. Edd top and bottom padding section class="decision"
3. Edd  in "Team" div class="content"  for h3 and p with padding: 30px all over

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <!--Переваги-->
       <section class="section benefits">
         <div class="container">
-          <h2 class="section-title">Переваги</h2>
+          <h2 class="section-title visually-hidden">Переваги</h2>
           <ul class="benefits list">
             <li class="item">
               <h3 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -102,23 +102,31 @@
           <ul class="team list">
             <li class="item">
               <img src="./images/igor.jpg" alt="фото чоловіка" class="img" width="270" />
-              <h3 class="team-title">Ігор Дем'яненко</h3>
-              <p lang="en" class="team-text">Product Designer</p>
+              <div class="content">
+                <h3 class="team-title">Ігор Дем'яненко</h3>
+                <p lang="en" class="team-text">Product Designer</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/olga.jpg" alt="фото жінки" class="img" width="270" />
-              <h3 class="team-title">Ольга Рєпіна</h3>
-              <p lang="en" class="team-text">Frontend Developer</p>
+              <div class="content">
+                <h3 class="team-title">Ольга Рєпіна</h3>
+                <p lang="en" class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/mikola.jpg" alt="фото чоловіка" class="img" width="270" />
-              <h3 class="team-title">Микола Тарасов</h3>
-              <p lang="en" class="team-text">Marketing</p>
+              <div class="content">
+                <h3 class="team-title">Микола Тарасов</h3>
+                <p lang="en" class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="item">
               <img src="./images/miha.jpg" alt="фото чоловіка" class="img" width="270" />
-              <h3 class="team-title">Михайло Єрмаков</h3>
-              <p lang="en" class="team-text">UI Designer</p>
+              <div class="content">
+                <h3 class="team-title">Михайло Єрмаков</h3>
+                <p lang="en" class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
