--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
     </header>
     <main class="page-portfolio">
       <div class="container porfolio">
-        <h1>Наші роботи</h1>
+        <h1 class="visually-hidden">Наші роботи</h1>
         <ul class="button list">
           <li class="item"><button type="button" class="page-button">Усі</button></li>
           <li class="item"><button type="button" class="page-button">Веб-сайти</button></li>
